--- a/nextjs/styles/Home.module.css
+++ b/nextjs/styles/Home.module.css
@@ -128,6 +128,13 @@
   }
 }
 
+.contain {
+  max-width: 1080px;
+  margin: auto;
+}
+.headImg {
+  
+}
 .sampleImage img {
   border: 1px #000 solid;
   margin: 1em auto;
