--- a/nextjs/styles/style.module.scss
+++ b/nextjs/styles/style.module.scss
@@ -132,3 +132,13 @@
   max-width: 1080px;
   margin: auto;
 }
+.nav {
+  ul {
+    display: flex;
+    gap: 1.5em;
+    li {
+      //margin-left: 1em;
+      font-weight: bold;
+    }
+  }
+}
