--- a/nextjs/styles/index.module.scss
+++ b/nextjs/styles/index.module.scss
@@ -71,12 +71,8 @@ div.header {
 
   }
 }
-.mainBlock {
-  display: flex;
-  &__Left {
-    background: #ccc;
-  }
-  &__Right {
-    
+div.main {
+  p {
+    color: red;
   }
 }
