--- a/nextjs/styles/style.module.scss
+++ b/nextjs/styles/style.module.scss
@@ -1,5 +1,5 @@
 @use "common" as *;
-/*@import url(https://fonts.googleapis.com/earlyaccess/notosansjp.css);*/
+@use "resetcss.module" as *;
 
 .youtube {
 	margin: 1em;
@@ -9,177 +9,44 @@
 	margin-bottom: 1em;
 }
 
-.header {
-	width: 100%;
-	height: 450px;
-	margin: 0 auto;
-	position: relative;
-	/*width:89%;*/
-	background-repeat: no-repeat;
-	background-position: center center;
-  &::after {
-    content: "";
-    display: block;
-    clear: both;
-    visibility: hidden;
-  }
-  .logo {
-    float: left;
-    background: url('logo.png');
+@include pc {
+  .header {
+    width: 100%;
+    height: 450px;
+    margin: 0 auto;
+    position: relative;
     background-repeat: no-repeat;
-    width: 170px;
-    height: 118px;
-    padding: 10px 0 0 0;
-  }
-}
-
-
-/*.header {
-  max-width: $max-size;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  h1 {
-    text-align: left;
-    margin: 0;
-    width: fit-content;
-    a {
+    background-position: center center;
+    &::after {
+      content: "";
       display: block;
-      color: #0070f3;
-      text-decoration: none;
-      &:hover,
-      &:focus,
-      &:active {
-        text-decoration: underline;
-      }
+      clear: both;
+      visibility: hidden;
     }
-  }
-  .nav {
-    ul {
-      display: flex;
-      gap: 1.5em;
-      margin: 0;
-      padding: 0;
-      li {
+    .logo {
+      float: left;
+      background: url('logo.png');
+      background-repeat: no-repeat;
+      width: 170px;
+      height: 118px;
+      padding: 10px 0 0 0;
+      a {
+        font-size: 20px;
+        color: #444;
         font-weight: bold;
-        list-style: none;
-        padding: 1rem;
         line-height: 1;
       }
+      span {
+        font-size: 12px;
+        font-weight: normal;
+      }
     }
   }
-}*/
-
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+  .headTitle {
+    font-size: 33px;
+    text-align: center;
+    color: #fff;
   }
-}
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
-}
 
-.contain {
-  max-width: $med-size;
-  margin: auto;
 }
